--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
             
     
-    <wb-module deploy-name="ABC Online Shop API">
+    <wb-module deploy-name="abc-onlineshop-api">
                         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
@@ -14,7 +14,7 @@
                         
         
         <property name="java-output-path" value="/payment-resource/target/classes"/>
-        <property name="context-root" value="ABC Online Shop API"/>
+        <property name="context-root" value="abc-onlineshop-api"/>
                     
     
     </wb-module>
